--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -15,6 +15,14 @@ body {
   object-fit: cover;
 }
 
+.img-view{
+	margin-top: 2rem;
+}
+
+.bold {
+	font-weight: bold;
+}
+
 .avatar{
   border-radius: 50%;
 }
