final version before of presentation - friday, 7.2.2020

--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -38,6 +38,7 @@
         name="lastName" placeholder="Bauer" required th:field="*{lastName}">
     </div>
 
+
     <div class="form-group">
       <label for="zip-code">Zip code</label> <input type="text" class="form-control" id="zip-code" name="zipName"
         placeholder="90427" required th:field="*{zipCode}">
@@ -63,8 +64,23 @@
       <label for="password">Password</label> <input type="password" class="form-control" id="password"
         aria-describedby="passwordHelp" name="password"
         onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-        placeholder="Password"required th:field="*{password}">
+        placeholder="Password" required th:field="*{password}">
     </div>
+
+
+ 
+
+<!-- 
+    ==> Problem: password & passwordRepeated wird nicht gezogen...!
+    
+    
+    Lösung noch einbauen:
+    1) PW Felder nur anzeigen, wenn sich ein User anmeldet
+    2) Separates PW-Change-Feld anlegen...
+    
+    
+     -->
+    
 
     <div class="form-group">
       <label for="passwordRepeated">Password (repeated)</label> <input type="password" class="form-control" id="passwordRepeated"
@@ -73,29 +89,6 @@
         placeholder="Verify Password" required th:field="*{passwordRepeated}">
     </div>
     
-    
-    
-    
-    
-
-<!--  Raus, nachdem getestet wurde !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
-
-						<tr>
-							<td><input th:value=*{password} id="password"
-								name="password" type="password"
-								onchange="if(this.checkValidity()) form.password_two.pattern = this.value;"
-								placeholder="Password" required="required">
-						</tr>						<tr>
-							<td><input th:value=*{password} id="password_two"
-								name="password_two" type="password"
-								onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-								placeholder="Verify Password" required="required"></td>
-						</tr>
-
--->
-
-
 
     <div class="form-group">
       <label for="user-description">Description</label>
