--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -75,7 +75,7 @@
 														</div>
 													</div>
 
-													<div class="row no-gutters">
+													<!--<div class="row no-gutters">
 														<div class="col-4">
 															<p class="bold">Age:</p>
 														</div>
@@ -85,7 +85,7 @@
 														<div class="col-6">
 															<p th:text="|${user.age}|"></p>
 														</div>
-													</div>
+													</div>-->
 
 													<div class="row no-gutters">
 														<div class="col-4">
