--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -35,8 +35,7 @@
 
 					<div class="card w-75">
 						<div class="card-header">
-							<h3
-								th:text="${userForm.id} ? 'Edit your profile' : 'Create your profile'">User3</h3>
+							<h3>Create your account</h3>
 						</div>
 						<div class="card-body">
 
@@ -87,13 +86,14 @@
 								</div>
 
 								<div class="form-group">
-									<label for="password">Password</label> <input type="password" class="form-control" id="password"
-									  aria-describedby="passwordHelp" name="password"
-									  onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-									  placeholder="Password" required th:field="*{password}">
-								  </div>
-							  
-							  <!-- 
+									<label for="password">Password</label> <input type="password"
+										class="form-control" id="password"
+										aria-describedby="passwordHelp" name="password"
+										onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
+										placeholder="Password" required th:field="*{password}">
+								</div>
+
+								<!-- 
 								  ==> Problem: password & passwordRepeated wird nicht gezogen...!
 								  
 								  
@@ -103,14 +103,17 @@
 								  
 								  
 								   -->
-								  
-							  
-								  <div class="form-group">
-									<label for="passwordRepeated">Password (repeated)</label> <input type="password" class="form-control" id="passwordRepeated"
-									  aria-describedby="passwordRepeatedHelp" name="passwordRepeated"
-									  onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-									  placeholder="Verify Password" required th:field="*{passwordRepeated}">
-								  </div>
+
+
+								<div class="form-group">
+									<label for="passwordRepeated">Password (repeated)</label> <input
+										type="password" class="form-control" id="passwordRepeated"
+										aria-describedby="passwordRepeatedHelp"
+										name="passwordRepeated"
+										onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
+										placeholder="Verify Password" required
+										th:field="*{passwordRepeated}">
+								</div>
 
 								<div class="form-group">
 									<label for="user-description">Description</label>
@@ -143,15 +146,7 @@
 								</ul>
 
 								<button type="submit" value="Submit"
-									class="btn btn-primary edit">Submit</button>
-							</form>
-
-							<form th:if="${userForm.id != null}" method="get"
-								th:action="@{/user/delete}" th:object="${userForm}">
-								<input name="id" th:field="*{id}" type="hidden">
-
-								<button type="submit" value="Submit" class="btn btn-danger">Permanently
-									delete my Account</button>
+									class="btn btn-primary edit">Create Account</button>
 							</form>
 						</div>
 					</div>
