--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -102,7 +102,7 @@
 							<div class="col-2"></div>
 
 							<div class="col-5">
-								<a class="btn btn-lg btn-primary btn-block" href="user/edit"
+								<a class="btn btn-lg btn-primary btn-block" th:href="register"
 									role="button">Register</a>
 
 							</div>
