--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -23,8 +23,8 @@
 
 <body>
 
-	<header th:replace="fragments.html :: top ('')">Here goes the
-		header</header>
+	<header th:replace="fragments.html :: top ('')">Here goes the header</header>
+	
 
 
 	<!-- Card-Header  ============================================================ Start-->
