--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -43,7 +43,7 @@
 
 											<img class="img-view"
 												th:src="@{${'/images/' + user.imageURL}}"
-												alt="Card image cap">
+												alt="../images/avatar.png">
 
 										</div>
 										<div class="col-md-8">
