--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -45,7 +45,9 @@
 
 											<img class="img-view"
 												th:src="@{${'/images/' + user.imageURL}}"
-												alt="Card image cap">
+												th:alt="@{/images/avatar.png}">
+												
+												
 
 										</div>
 										<div class="col-md-8">
