--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -55,13 +55,13 @@
 								<div class="form-group">
 									<label for="user-last-name">Last name</label> <input
 										type="text" class="form-control" id="lastName" name="lastName"
-										placeholder="Bauer" required th:field="*{lastName}">
+										placeholder="Bauer" th:field="*{lastName}">
 								</div>
 
 								<div class="form-group">
 									<label for="zip-code">Zip code</label> <input type="text"
 										class="form-control" id="zip-code" name="zipName"
-										placeholder="90427" required th:field="*{zipCode}">
+										placeholder="90427" th:field="*{zipCode}">
 								</div>
 
 								<div class="form-group">
