--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -206,9 +206,16 @@ main.changePw_background {
 	height: 400px;
 	background-color: rgb(255,255,255,0.5);
 	border-radius: 1em;
+	margin: ($spacer * 3) !important;
 	
 }
 
+
+/*
+.m-1 {
+  margin-left: ($spacer * .25) !important;
+}
+*/
 
 .changePwButtonRight {
 	padding-right: 16px;
