--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -144,8 +144,8 @@
 									<li th:each="userSkillLevel, stat : *{userSkillLevels}">
 										<div class="custom-control custom-switch">
 											<input type="hidden"
-												th:field="*{userSkillLevels[__${stat.index}__].id}" /> <input
-												class="custom-control-input" type="checkbox"
+												th:field="*{userSkillLevels[__${stat.index}__].id}" />
+											<input class="custom-control-input" type="checkbox"
 												th:id="${'toggle' + userSkillLevel.id}"
 												th:field="*{userSkillLevels[__${stat.index}__].checked}" />
 											<label class="custom-control-label"
