--- a/src/main/resources/templates/changePw.html
+++ b/src/main/resources/templates/changePw.html
@@ -25,26 +25,6 @@
 
 <body>
 
-	<!-- ***************************************************************************************************************************
-<!-- Besser dieser Header???? Aber im Augenlick stürzt das Ganze noch ab...  -->
-	<!-- ***************************************************************************************************************************
-		<header>
-		<nav class="navbar navbar-expand-md navbar-light bg-light">
-			<a class="navbar-brand" href="/">SkillHub</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown"
-				aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="navbarNavDropdown">
-				<ul class="navbar-nav">
-				</ul>
-			</div>
-		</nav>
-	</header>
-ALT *******************************************************************************************************************************-->
-
-
 	<header th:replace="fragments.html :: top ('')">Here goes the
 		header</header>
 
@@ -53,20 +33,12 @@ ALT ****************************************************************************
 		<div class="changePw-box">
 			<section>
 				<div class="flex-container container">
-					<form method="post" th:action="@{/perform_login}" name="f"  >
-					
-					
-					
-					<form method="post" th:action="@{/user/upsert}" th:object="${userForm}"> <input name="id" th:field="*{id}" type="hidden">
-					<!--<input name="age" th:field="*{age}" type="hidden">-->
-					
-					
+					<form method="post" th:action="@{/perform_login}" th:object="${passwordForm}">
 					
 					
 						<fieldset>
 							<h2>Change Password</h2>
-							<div th:if="${param.error}" class="alert alert-error">
-								Invalid username or password.</div>
+							<div th:if="${param.error}" class="alert alert-error">Invalid username or password.</div>
 							<div th:if="${param.logout}" class="alert alert-success">You
 								have changed your password.</div>
 
@@ -91,22 +63,54 @@ ALT ****************************************************************************
 
 							<div class="row no-gutters">
 								<div class="col-7">
+									
+									<!--<div class="form-group">
+									<label for="password">Password</label>
+									<input type="password" class="form-control" id="password" aria-describedby="passwordHelp" name="password" 
+									onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
+										placeholder="Password" required th:field="*{password}">
+									</div> -->
+									
 									<p>
-										<label for="password" class="sr-only">Password2</label> <input
-											type="password" id="password" name="password"
+										<label for="password" class="sr-only">Password2</label>
+										<input type="password" id="password" name="password"
+											onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
 											class="form-control" placeholder="New password" required="">
 									</p>
 								</div>
 							</div>
 
+
+
+
+
+
+
+
+
+
+
+
 							<div class="row no-gutters">
 								<div class="col-7">
-									<p>
+									
+									<!--<div class="form-group">
+									<label for="passwordRepeated">Password (repeated)</label> <input
+										type="password" class="form-control" id="passwordRepeated"
+										aria-describedby="passwordRepeatedHelp"
+										name="passwordRepeated"
+										onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
+										placeholder="Verify Password" required
+										th:field="*{passwordRepeated}">
+								</div>-->
+									
+									 <p>
 										<label for="username" class="sr-only">Email2</label> <input
 											type="text" id="username" name="username"
+											onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
 											class="form-control" placeholder="Repeat new password"
 											required="" autofocus="">
-									</p>
+									</p>  
 								</div>
 							</div>
 						</fieldset>
@@ -139,31 +143,6 @@ ALT ****************************************************************************
 
 			</section>
 		</div>
-
-		<!-- 
-								<div class="form-group">
-									<label for="password">Password</label> <input type="password"
-										class="form-control" id="password"
-										aria-describedby="passwordHelp" name="password"
-										onchange="if(this.checkValidity()) form.passwordRepeated.pattern = this.value;"
-										placeholder="Password" required th:field="*{password}">
-								</div>
-
-
-								<div class="form-group">
-									<label for="passwordRepeated">Password (repeated)</label> <input
-										type="password" class="form-control" id="passwordRepeated"
-										aria-describedby="passwordRepeatedHelp"
-										name="passwordRepeated"
-										onchange="this.setCustomValidity(this.validity.patternMismatch ? 'Please enter the same Password as above' : '');"
-										placeholder="Verify Password" required
-										th:field="*{passwordRepeated}">
-								</div>
- -->
-
-
-
-
 
 	</main>
 
