Index schön machen

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -122,9 +122,9 @@ ul {
 }*/
 
 
-.index{
+/*.index{
 	felx-direction: colum;
-}
+}*/
 
 
 
@@ -216,12 +216,25 @@ main.changePw_background {
 }
 
 
+main.index {
+	background-image: url(../images/milkyway.jpg);
+	background-size: cover;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-warp:
+}
 
+.index-text{
+	background-color: rgb(255,255,255,0.6);
+}
 
+.p-index{
+	padding-bottom: 2rem;
+	font-size: 1.5rem;
+	font-weight: 490;
+}
 
-
-
-
-
-
-
+.h1-index{
+	padding-top: 2rem;
+}
