--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,49 +26,55 @@
 	<header th:replace="fragments.html :: top ('')">Here goes the
 		header</header>
 
-	<main>
-		<!--Jumbotron-->
+	<main class="index">
+		<!--Jumbotron
 		<div class="jumbotron">
 			<img class="img" src="../images/milkyway.jpg" alt="alt">
 			<div class="box">
 				<h1 class="display-4" style="color: black">SkillHub</h1>
 				<p class="lead" style="color: black">What are you looking for?</p>
 			</div>
-		</div>
+		</div>-->
 
 		<section>
-			<div class="flex-container container">
-				<h1>Welcome to SkillHub</h1>
-				<p>SkillHub is a social platform for skill exchange. It serves
-					as a service platform for individuals to trade their services and
-					strengths, and in return, learn skills or get personal assistance
-					from subject matter esperts thereby removing all barriers of peer
-					to peer learning. Choose from a Range of Services to help you excel
-					in life, and most importantly, experience the true joy of sharing!
-					So let's koin and see what skills could enrich your life. And once
-					you learnt something, don't forget: Life is for sharing!</p>
+			<div class="flex-container container index-text">
+				<div class="row no-gutters">
+					<h1 class="h1-index">Welcome to SkillHub</h1>
+					<p class="p-index">SkillHub is a social platform for skill
+						exchange. It serves as a service platform for individuals to trade
+						their services and strengths, and in return, learn skills or get
+						personal assistance from subject matter esperts thereby removing
+						all barriers of peer to peer learning. Choose from a Range of
+						Services to help you excel in life, and most importantly,
+						experience the true joy of sharing! So let's koin and see what
+						skills could enrich your life. And once you learnt something,
+						don't forget: Life is for sharing!</p>
+				</div>
 
-				<p>
-					<iframe src="https://giphy.com/embed/BJmTtZL4hova8" width="480"
-						height="235" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p>
-					<a
-						href="https://giphy.com/gifs/harry-potter-hermione-granger-ron-BJmTtZL4hova8">via
-						GIPHY</a>
-				</p>
-				</p>
+				<div class="row no-gutters">
+					<p>
+						<iframe src="https://giphy.com/embed/BJmTtZL4hova8" width="480"
+							height="235" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+					</p>
 
-				<p></p>
+				</div>
 
+				<div class="row no-gutters">
+
+					<p>
+						<a
+							href="https://giphy.com/gifs/harry-potter-hermione-granger-ron-BJmTtZL4hova8">via
+							GIPHY</a>
+					</p>
+				</div>
 			</div>
 		</section>
-</body>
+
+	</main>
 
 
-</main>
-
-
-<footer th:replace="fragments.html :: bottom">Here goes the
-	footer</footer>
+	<footer th:replace="fragments.html :: bottom">Here goes the
+		footer</footer>
 
 
 </body>
