--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -45,8 +45,7 @@
 		<div class="jumbotron">
 			<img class="img" src="../images/milkyway.jpg" alt="alt">
 			<div class="box">
-				<h1 class="display-4" style="color: black">Are you sure you
-					want to log out?</h1>
+				<h1 class="display-4" style="color: black">Logout</h1>
 				<p class="lead" style="color: black"></p>
 			</div>
 		</div>
@@ -59,17 +58,33 @@
 
 				<div class="row no-gutters">
 					<div class="col-8">
-						<h2 class="form-signin-heading">Are you sure you want to log
-							out?</h2>
+						<h2 class="form-signin-heading text-center">Are you sure you
+							want to log out?</h2>
+					</div>
+				</div>
+
+
+				<div class="row no-gutters">
+					<div class="col-3"></div>
+					<div class="col-2">
+						<p></p>
 						<input name="_csrf" type="hidden"
 							value="60be4d8d-628f-4abb-9430-00dc9f05073e">
 						<button class="btn btn-lg btn-primary btn-block" type="submit">Logout</button>
 					</div>
+
+					<p></p>
 				</div>
-				
+
+
+
+
+
 				<div class="row no-gutters">
-				<p></p>
+					<p></p>
 				</div>
+
+
 
 			</form>
 		</div>
