--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -58,7 +58,7 @@
 												<div class="col-md-4">
 
 													<img class="img-view"
-														th:src="@{${'/images/' + user.imageURL}}"
+														th:src="@{'/user/' +  ${user.id} + '/image'}"
 														alt="Card image cap">
 
 												</div>
