--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -43,16 +43,9 @@
 									<div class="row no-gutters">
 										<div class="col-md-4">
 
-											<!--	<img class="img-view" th:src= "${user.imageURL.empty ? 'images/avatar.png' : ''/images/' + user.imageURL}">
-											th:src="@{${'/images/' + user.imageURL}}"
-												alt="/images/avatar.png">
-												th:src= "${user.imageURL.empty ? 'images/avatar.png' : ''/images/' + user.imageURL}"-->
 
-
-											<img class="img-view" th:unless="${user.imageURL.empty}"
-												th:src="@{${'/images/' + user.imageURL}}" alt="" /> <img class="img-view"
-												th:if="${user.imageURL.empty}" height="150" width="150"
-												src="../images/avatar.png" />
+											<img class="img-view"
+												th:src="@{'/user/' + ${user.id} + '/image'}">
 
 										</div>
 										<div class="col-md-8">
