--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -44,8 +44,11 @@
 										<div class="col-md-4">
 
 
-											<img class="img-view"
-												th:src="@{'/user/' + ${user.id} + '/image'}">
+											<img class="img-view" th:unless="${user.image}"
+												src="../images/avatar.png" height="150" width="150"> <img
+												class="img-view" th:if="${user.image}"
+												th:src="@{'/user/' + ${user.id} + '/image'}" height="150"
+												width="150">
 
 										</div>
 										<div class="col-md-8">
