--- a/src/main/resources/templates/users/get_by_skill.html
+++ b/src/main/resources/templates/users/get_by_skill.html
@@ -57,9 +57,11 @@
 											<div class="row no-gutters">
 												<div class="col-md-4">
 
-													<img class="img-view"
-														th:src="@{'/user/' +  ${user.id} + '/image'}"
-														alt="Card image cap">
+													<img class="img-view" th:unless="${user.image}"
+														src="../images/avatar.png" height="150" width="150">
+													<img class="img-view" th:if="${user.image}"
+														th:src="@{'/user/' + ${user.id} + '/image'}" height="150"
+														width="150">
 
 												</div>
 												<div class="col-md-8">
