--- a/src/main/resources/templates/user/deleted.html
+++ b/src/main/resources/templates/user/deleted.html
@@ -20,7 +20,7 @@
 
 <body class="text-center">
 
-  <header th:replace="fragments.html :: top ('')">Here goes the header</header>
+  <header th:replace="fragments.html :: top">Here goes the header</header>
 
   <main role="main" class="inner cover">
     <br>
