--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -22,7 +22,7 @@
 	crossorigin="anonymous"></script>
 </head>
 
-<header th:replace="fragments.html :: top (iurl= ${user.imageURL})">Here
+<header th:replace="fragments.html :: top">Here
 	goes the header</header>
 
 <body>
