--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -87,15 +87,14 @@ body {
 	margin-top: 2rem;
 }
 
-
-
 .btn-block {
     display: block;
     width: 100%;
 }
 
-
-
+.btn-outline-secondary{
+	margin-top:1.5rem;
+}
 /*.btn-primary{
 	display: flex;
 	justify-content: center;
