--- a/src/main/resources/templates/user/view.html
+++ b/src/main/resources/templates/user/view.html
@@ -23,7 +23,7 @@
 
 <body>
 
-	<header th:replace="fragments.html :: top ('')">Here goes the
+	<header th:replace="fragments.html :: top">Here goes the
 		header</header>
 
 
