--- a/src/main/resources/templates/users/get_all.html
+++ b/src/main/resources/templates/users/get_all.html
@@ -21,7 +21,7 @@
 	crossorigin="anonymous"></script>
 </head>
 
-<header th:replace="fragments.html :: top ('')">Here goes the header</header>
+<header th:replace="fragments.html :: top">Here goes the header</header>
 
 
 <!-- 
